2000-10-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/shm_open.c: Correct default mount point
	in comments.
	(freeit): Remove unnecessary test.

2000-10-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/dl-machine.h (ELF_MIPS_GNU_GOT1_OK): New.
	(ELF_MACHINE_BEFORE_RTLD_RELOC): Handle newer linkers.
	(elf_machine_runtime_link_map): Likewise.
	(elf_machine_runtime_setup): Likewise.
	Handle dynamic linker's local got entries.
	Patches by Ralf Baechle <ralf@gnu.org>.

2000-10-09  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/mips/dl-machine.h (_dl_runtime_resolve): Define $sp as
	the frame pointer.  Allocate stack space for $a0 for
	__dl_runtime_resolve().  Do not save $sp in $s0 as it's
	callee-saved anyway.

2000-10-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update for changes in
	libm-test.inc.

2000-10-17  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/fpu/libm-test-ulps: Update for changes in
	libm-test.inc.

2000-10-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/ldbl-128/printf_fphex.c (PRINT_FPHEX_LONG_DOUBLE):
	Add missing backslash.

2000-10-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (DL_FIND_ARG_COMPONENTS): Little cleanup.

	* sysdeps/i386/fpu/libm-test-ulps: Update for changes in libm-test.inc.

2000-10-16  Jakub Jelinek  <jakub@redhat.com>

	* math/libm-test.inc (M_LOG_SQRT_PIl, M_LOG_2_SQRT_PIl): Increase
	precision.
	(acos_test, asin_text, cexp_test, cos_test, cproj_test, exp10_test,
	sin_test, sincos_test, sqrt_test): Likewise.  Add L suffixes also
	to parameters.
	(acosh_test, asinh_test, atan2_test, atanh_test, atan_test, cabs_test,
	cacosh_test, cacos_test, casinh_test, casin_test, catanh_test,
	catan_test, cbrt_test, ccosh_test, ccos_test, clog10_test, cosh_test,
	csinh_test, csin_test, csqrt_test, ctanh_test, ctan_test, erfc_test,
	erf_test, exp2_test, expm1_test, exp_test, fmod_test, hypot_test,